set thread pool for http server + distribute transaction inputs across many deques to aovid contention in http requests + cleanup coordinator options + remove last tid of batch from batch commit messages (this is only necessary for now in transaction payloads)